--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
+    "test": "node --loader ./ts-test-loader.mjs --test src/context/__tests__/supabaseDataManagement.test.ts",
     "preview": "vite preview"
   },
   "dependencies": {
